# ros2_lidar_camera_cog

./: README.md
Livox-SDK/sdk_core/src/base/: thread_base.cpp  thread_base.h
cabbage_detection/: package.xml  setup.cfg  setup.py
cabbage_detection/cabbage_detection/: fusion_node.py  fusion_utils.py  pointcloud_detector.py
cabbage_detection/config/: params.yaml
cabbage_detection/launch/: detection.launch.py
cabbage_fusion/: CMakeLists.txt  package.xml
cabbage_fusion/config/: params.yaml
cabbage_fusion/include/rosidl_runtime_cpp/: visibility_control.hpp
cabbage_fusion/src/: fusion_node.cpp
camera_lidar_fusion/: package.xml  setup.py
camera_lidar_fusion/camera_lidar_fusion/: fusion_node.py
camera_object_detection/: package.xml  setup.py
camera_object_detection/camera_object_detection/: object_detection_node.py
hik_camera_ros/: CMakeLists.txt  LICENSE  package.xml
hik_camera_ros/src/: hik_camera_node.cpp
lidar_cabbage_detection/: CMakeLists.txt  package.xml  split_dataset.py
lidar_cabbage_detection/lidar_cabbage_detection/: CMakeLists.txt  package.xml
lidar_cabbage_detection/lidar_cabbage_detection/src/: cabbage_detection_node.cpp
lidar_cabbage_detection/src/: cabbage_detection_node.cpp
livox_ros2_driver/: CMakeLists.txt
livox_ros2_driver/config/: livox_lidar_config.json
livox_ros2_driver/livox_ros2_driver/: lddc.cpp
livox_ros2_driver/timesync/: timesync.cpp  timesync.h
livox_sdk_vendor/: CMakeLists.txt
livox_soil_filter/: package.xml  setup.cfg  setup.py
livox_soil_filter/livox_soil_filter/: seedling_filter_node.py
object_association/: package.xml  setup.cfg  setup.py
object_association/object_association/: association_node.py
pointcloud_crop_band/: package.xml  setup.cfg  setup.py
pointcloud_crop_band/pointcloud_crop_band/: crop_band_node.py
ros2_hik_camera/: README.md
ros2_hik_camera/config/: camera_params.yaml
ros2_hik_camera/src/: hik_camera_node.cpp
sensor_sync/: CMakeLists.txt  package.xml
sensor_sync/src/: lidar_time_converter.cpp  sync_node.cpp
