<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cabbage_fusion</name>
  <version>0.0.1</version>
  <description>视觉优先过滤+激光查漏补缺的甘蓝检测融合包</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build / exec / run time deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <!-- optional/tooling -->
  <build_depend>ament_index_cpp</build_depend>
  <build_export_depend>ament_index_cpp</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
