<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- 包基本信息 -->
  <name>lidar_cabbage_detection</name>
  <version>0.0.1</version>
  <description>LiDAR-based cabbage detection for ROS2 (tilted view 45-70°, size-calibrated for ≤13cm diameter)</description>
  <maintainer email="2771402115@qq.com">abc</maintainer>
  <license>Apache-2.0</license>

  <!-- 编译工具依赖（必须） -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行依赖（代码中直接使用的ROS2包） -->
  <depend>rclcpp</depend>                  <!-- ROS2 C++核心框架 -->
  <depend>sensor_msgs</depend>             <!-- 点云消息（sensor_msgs/PointCloud2） -->
  <depend>visualization_msgs</depend>      <!-- 可视化消息（Marker用于包围框/标签） -->
  <depend>pcl_conversions</depend>         <!-- ROS2与PCL的点云格式转换 -->

  <!-- 系统依赖（PCL开发库，编译和运行都需要） -->
  <build_depend>libpcl-dev</build_depend>
  <exec_depend>libpcl-dev</exec_depend>

  <!-- 测试依赖（可选，如需代码检查可保留） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 包类型声明（ROS2标准） -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

