<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_sync</name>
  <version>0.0.0</version>
  <description>同步相机和雷达数据的功能包</description>
  <maintainer email="your_email@example.com">abc</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心依赖（<depend>已包含编译和运行时，无需重复写<exec_depend>） -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>livox_ros2_driver</depend>
  <depend>livox_interfaces</depend>  <!-- 新增：依赖消息类型包 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

